--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-.DS_Store
 *.py[cod]
+.DS_Store
+*.log
+
+# emacs
+*~
+._*
+.\#*
+\#*\#
 
 # C extensions
 *.so
@@ -18,7 +25,6 @@ develop-eggs
 .installed.cfg
 lib
 lib64
-__pycache__
 
 # Installer logs
 pip-log.txt
