title tweak (lemme know whatcha think) and hashtag SEO

--- a/content.yaml
+++ b/content.yaml
@@ -1,6 +1,6 @@
  # Collection of wikipedia visualizations
 ---
-page_title: "See also: Wikipedia visualizations"
+page_title: "See, also"
 page_subtitle: >
     A collection of visualization projects built on <a
     href="https://meta.wikimedia.org/wiki/Research:Data">Wikipedia data</a>.
