--- a/content.yaml
+++ b/content.yaml
@@ -7,6 +7,22 @@ page_subtitle: >
 ---
  # Each visualization should include a title, url, image, and description
 ---
+title: ClusterBall
+year: 2007 
+date_added: 2013-10-15
+url: http://www.chrisharrison.net/index.php/Visualizations/ClusterBall
+image: viz/clusterball.png
+description: > 
+    "The clustering component of this visualization is vital. The
+    mere presence of information isn't all that interesting; there is no
+    context or relevance to be gleaned. However, the structure of information
+    is revealing about where fields intersect and diverge, and ultimately
+    about how humans organize information." 
+authors: >
+    <a href="http://www.chrisharrison.net/index.php">Chris Harrison</a>
+code: 
+data: 
+---
 title: Notabilia
 year: 2011
 date_added: 2013-10-12
@@ -18,7 +34,7 @@ description: >
     the 100 longest discussions that resulted in the deletion of the
     respective article. "
 authors: >
-    Dario Taraborelli, Giovanni Luca
+    <a href="https://twitter.com/readermeter">Dario Taraborelli</a>, Giovanni Luca
     Ciampaglia, and Moritz Stefaner
 code:
 ---
@@ -44,7 +60,11 @@ image: viz/wlm-map.png
 description: >
     "Elle permet d'explorer les monuments historiques du monde entier."
 authors: <a href="http://bzg.fr/">bzg</a>
-code:
+code: <a href="https://github.com/bzg/wlmmap">available on github</a>.
+data: >
+    <a href="https://commons.wikimedia.org/wiki/Commons:Monuments_database">
+    Wikimedia Commons monuments database
+    </a>
 ---
 title: wikistream
 year: 2012
@@ -74,7 +94,8 @@ description: >
     wanted to see the relations between the proportion female/male editing and
     article and its content."
 authors: <a href="https://twitter.com/moebio">Santiago Ortiz</a>
-code:
+code: 
+data: Wikipedia API
 ---
 title: Wikistalker
 year: 2013
@@ -88,7 +109,8 @@ description: >
 authors: >
     <a href="http://sepans.com/">sepans</a>, <a
     href="http://raschin.com/">raschin</a>
-code:
+code: 
+data: <a href="http://wikipedia-miner.cms.waikato.ac.nz/">Wikipedia miner</a>
 ---
  # other sections for the site
 ---
