--- a/content.yaml
+++ b/content.yaml
@@ -7,6 +7,21 @@ page_subtitle: >
 ---
  # Each visualization should include a title, url, image, and description
 ---
+title: WikiChanges
+year: 2008
+date_added: 2014-01-28
+url: http://sergionunes.com/p/wikichanges/
+image: viz/wikichanges_sm.png
+description: >-
+
+  Using Wikipedia's API, WikiChanges charts and compares revision
+  activity of articles over time, offering insights into the editing
+  patterns of contributors and the attentions of the masses.
+
+authors: <a href="http://paginas.fe.up.pt/~ssn/">Sérgio Nunes</a>
+code: <a href="http://paginas.fe.up.pt/~ssn/pubs/nunes08-wikisym.pdf">WikiSym Paper</a>
+data: <a href="https://www.mediawiki.org/wiki/API:Main_page">Wikipedia API</a>
+---
 title: Wikimedia Community Visualization
 year: 2013
 date_added: 2013-12-15
@@ -28,7 +43,7 @@ date_added: 2013-11-16
 url: http://wikiproject.oii.ox.ac.uk/networks/index.php
 image: viz/co-editing_sm.png
 description: >-
-  
+
   "These links indicate individuals who have co-edited many pages together on
   Wikipedia. We use a custom weighting technique, and filter down to the core
   editors (in every language except Egyptian Arabic and Swahili where we use
@@ -41,7 +56,7 @@ authors: >-
   Graham</a>, Ahmed Medhat Mohammed, Bernie Hogan and Richard Farmbrough,
   Oxford Internet Institute
 
-code: 
+code:
 data: Wikipedia dumps
 ---
 title: "Information Imbalance: Africa on Wikipedia"
@@ -244,7 +259,7 @@ description: >
     article and its content."
 authors: <a href="https://twitter.com/moebio">Santiago Ortiz</a>
 code:
-data: Wikipedia API
+data: <a href="https://www.mediawiki.org/wiki/API:Main_page">Wikipedia API</a>
 ---
 title: Wikistalker
 year: 2013
