wikipulse image fix

--- a/content.yaml
+++ b/content.yaml
@@ -11,7 +11,7 @@ title: Wikipulse
 year: 2011
 date_added: 2015-11-19
 url: http://wikipulse.herokuapp.com/
-image: viz/edit-history-stratigraphy_sm.png
+image: viz/wikipulse_sm.png
 description: >-
 
     A simple and familiar dashboard of edit rates to various wikis,
